--- a/cssstylesfiles/styles.css
+++ b/cssstylesfiles/styles.css
@@ -1,6 +1,12 @@
-/* External CSS */
-.external-style {
-    color: purple;
-    font-size: 18px;
-    text-align: center;
+/* External CSS styles for additional padding and margin types */
+.box4 {
+    background-color: #e91e63;
+    padding: 25px 15px 5px 35px; /* Top, Right, Bottom, Left padding */
+    margin: 25px 10px 5px 15px;  /* Top, Right, Bottom, Left margin */
+}
+
+.box5 {
+    background-color: #9c27b0;
+    padding: 40px 20px;  /* Vertical: 40px, Horizontal: 20px */
+    margin: 50px 0;      /* Vertical: 50px, Horizontal: 0 */
 }
