--- a/cssstylesfiles/styles.css
+++ b/cssstylesfiles/styles.css
@@ -1,10 +1,8 @@
 .external-box {
-    border: 2px solid purple;
-    background-color: #f0f8ff;
+    border: 2px solid;
     padding: 20px;
     margin: 20px;
     border-radius: 10px;
-    box-shadow: 0 4px 8px rgba(0, 0, 0, 0.2);
 }
 
 h2 {
